# vulnerable-rust

./: Cargo.toml  README.md
.github/workflows/: rust_app.yml
